infra/k8s/10-mongodb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: ms-starter
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: ms-starter
spec:
  replicas: 1
  selector:
    matchLabels: { app: mongo }
  template:
    metadata:
      labels: { app: mongo }
    spec:
      containers:
        - name: mongo
          image: mongo:7
          ports:
            - containerPort: 27017
