infra/k8s/20-api-node.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-node
  namespace: ms-starter
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '80'
    prometheus.io/path: /metrics
spec:
  selector:
    app: api-node
  ports:
  - name: metrics
    port: 80
    targetPort: 4000
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-node
  namespace: ms-starter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-node
  template:
    metadata:
      labels:
        app: api-node
    spec:
      containers:
      - name: api-node
        image: api-node:dev
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 4000
        readinessProbe:
          tcpSocket:
            port: 4000
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
        livenessProbe:
          tcpSocket:
            port: 4000
          initialDelaySeconds: 15
          periodSeconds: 20
          timeoutSeconds: 2
          failureThreshold: 3
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
