infra/k8s/22-api-go.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-go
  namespace: ms-starter
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '80'
    prometheus.io/path: /metrics
spec:
  selector:
    app: api-go
  ports:
  - port: 80
    targetPort: 7000
    name: metrics
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-go
  namespace: ms-starter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-go
  template:
    metadata:
      labels:
        app: api-go
    spec:
      containers:
      - name: api-go
        image: api-go:dev
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 7000
        readinessProbe:
          tcpSocket:
            port: 7000
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
        livenessProbe:
          tcpSocket:
            port: 7000
          initialDelaySeconds: 15
          periodSeconds: 20
          timeoutSeconds: 2
          failureThreshold: 3
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
