infra/k8s/30-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-frontend
  namespace: ms-starter
spec:
  selector: { app: web-frontend }
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-frontend
  namespace: ms-starter
spec:
  replicas: 1
  selector:
    matchLabels: { app: web-frontend }
  template:
    metadata:
      labels: { app: web-frontend }
    spec:
      containers:
        - name: web
          image: web-frontend:dev
          imagePullPolicy: IfNotPresent
          ports: [{ containerPort: 80 }]
